<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.byteslounge</groupId>
	<artifactId>cdi-properties</artifactId>
	<version>1.0.0-SNAPSHOT</version>

	<name>CDI Properties</name>
	<description>A CDI extension that enables resource bundle injection and resolution in Java EE applications.</description>
	<url>https://github.com/gonmarques/cdi-properties</url>
	<inceptionYear>2014</inceptionYear>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>gonmarques</id>
			<name>Gonçalo Marques</name>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.7</java.version>
		<javaee-api.version>6.0</javaee-api.version>
		<slf4j-api.version>1.7.5</slf4j-api.version>
		<junit.version>4.11</junit.version>
		<arquillian-junit-container.version>1.1.5.Final</arquillian-junit-container.version>
		<arquillian-glassfish-remote.version>1.0.0.CR4</arquillian-glassfish-remote.version>
		<arquillian-drone-bom.version>1.3.1.Final</arquillian-drone-bom.version>
		<maven-compiler.version>3.1</maven-compiler.version>
		<maven-failsafe-plugin.version>2.11</maven-failsafe-plugin.version>
		<slf4j-jdk14.version>1.7.7</slf4j-jdk14.version>
		<skipTests>true</skipTests>
	</properties>

	<profiles>
		<profile>
			<id>ExecuteTests</id>
			<activation>
				<property>
					<name>executeTests</name>
				</property>
			</activation>
			<properties>
				<skipTests>false</skipTests>
			</properties>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${maven-failsafe-plugin.version}</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
					<argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
					<printSummary>true</printSummary>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
					<parallel>none</parallel>
					<forkCount>0</forkCount>
					<threadCount>1</threadCount>
					<classpathDependencyExcludes>
						<classpathDependencyExcludes>javax:javaee-api</classpathDependencyExcludes>
					</classpathDependencyExcludes>
					<systemPropertyVariables>
						<java.util.logging.config.file>
							${project.build.testOutputDirectory}/logging.properties
						</java.util.logging.config.file>
					</systemPropertyVariables>
				</configuration>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<phase>integration-test</phase>
						<configuration>
							<includes>
								<include>**/*IT.java</include>
							</includes>
							<excludes>
								<exclude>**/*$*</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>verify</id>
						<phase>verify</phase>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.arquillian.extension</groupId>
				<artifactId>arquillian-drone-bom</artifactId>
				<version>${arquillian-drone-bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies> 
		<!-- Test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			<version>${arquillian-junit-container.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.container</groupId>
			<artifactId>arquillian-glassfish-remote-3.1</artifactId>
			<version>${arquillian-glassfish-remote.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>shrinkwrap-descriptors-api-base</artifactId>
					<groupId>org.jboss.shrinkwrap.descriptors</groupId>
				</exclusion>
				<exclusion>
					<artifactId>arquillian-container-spi</artifactId>
					<groupId>org.jboss.arquillian.container</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-drone-impl</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>arquillian-config-api</artifactId>
					<groupId>org.jboss.arquillian.config</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-drone-selenium</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>arquillian-config-api</artifactId>
					<groupId>org.jboss.arquillian.config</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-drone-selenium-server</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.extension</groupId>
			<artifactId>arquillian-drone-webdriver-depchain</artifactId>
			<type>pom</type>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>arquillian-config-api</artifactId>
					<groupId>org.jboss.arquillian.config</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>${slf4j-jdk14.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${javaee-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-api.version}</version>
		</dependency>

	</dependencies>

</project>
